# proedit-studio

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
crates/proedit-ai/: Cargo.toml
crates/proedit-ai/src/: analysis_store.rs  audio_classify.rs  auto_color.rs  auto_edit.rs  content_index.rs  error.rs  filler_detect.rs  ingest_pipeline.rs  interpolation.rs  lib.rs  model_manager.rs  narrative.rs  reframe.rs  rotoscope.rs  scene_detect.rs  session.rs  speaker_diarize.rs  stem_separation.rs  style_learning.rs  transcribe.rs  upscale.rs
crates/proedit-app/: Cargo.toml
crates/proedit-app/src/: ai_bridge.rs  compositor.rs  main.rs
crates/proedit-audio/: Cargo.toml
crates/proedit-audio/src/: lib.rs  mixer.rs  ring_buffer.rs  waveform.rs
crates/proedit-color/: Cargo.toml
crates/proedit-color/src/: color_space.rs  error.rs  hdr.rs  lib.rs  lut.rs  pipeline.rs  tonemapping.rs  transfer.rs
crates/proedit-core/: Cargo.toml
crates/proedit-core/benches/: time_bench.rs
crates/proedit-core/src/: color.rs  error.rs  frame.rs  geometry.rs  keyframe.rs  lib.rs  time.rs
crates/proedit-effects/: Cargo.toml
crates/proedit-effects/src/: chroma_key.rs  frame_interp.rs  lib.rs  mask.rs  motion_blur.rs  optical_flow.rs  transition.rs
crates/proedit-effects/src/transitions/: cross_dissolve.rs  dip_to_black.rs  dip_to_white.rs  iris.rs  mod.rs  push.rs  wipe.rs
crates/proedit-gpu/: Cargo.toml
crates/proedit-gpu/src/: blend.rs  context.rs  lib.rs  pipeline.rs  render_graph.rs  texture.rs  texture_pool.rs
crates/proedit-gpu/src/shaders/: blit.wgsl  chroma_key.wgsl  color_transform.wgsl
crates/proedit-media/: Cargo.toml
crates/proedit-media/src/: decoder.rs  export.rs  lib.rs  probe.rs
crates/proedit-plugin/: Cargo.toml
crates/proedit-plugin/src/: error.rs  lib.rs  plugin_manager.rs  wasm_sandbox.rs
crates/proedit-plugin/src/ofx/: mod.rs
crates/proedit-scripting/: Cargo.toml
crates/proedit-scripting/src/: builtins.rs  context.rs  engine.rs  error.rs  expression.rs  lib.rs
crates/proedit-tests/: Cargo.toml
crates/proedit-tests/src/: audio.rs  gpu.rs  lib.rs  timeline.rs
crates/proedit-timeline/: Cargo.toml
crates/proedit-timeline/src/: clip.rs  edit.rs  lib.rs  project.rs  serialization.rs  track.rs
crates/proedit-tracking/: Cargo.toml
crates/proedit-tracking/src/: lib.rs  planar_tracker.rs  point_tracker.rs  pyramid.rs  stabilize.rs
crates/proedit-ui/: Cargo.toml
crates/proedit-ui/src/: anim.rs  audio_mixer.rs  color_wheels.rs  command_palette.rs  commands.rs  curve_editor.rs  effects_panel.rs  export_dialog.rs  inspector.rs  lib.rs  media_browser.rs  snapping.rs  theme.rs  timeline.rs  top_bar.rs  trim.rs  viewer.rs  widgets.rs
