[workspace]
resolver = "2"
members = [
    "crates/proedit-core",
    "crates/proedit-media",
    "crates/proedit-gpu",
    "crates/proedit-timeline",
    "crates/proedit-effects",
    "crates/proedit-ui",
    "crates/proedit-audio",
    "crates/proedit-ai",
    "crates/proedit-tracking",
    "crates/proedit-plugin",
    "crates/proedit-scripting",
    "crates/proedit-color",
    "crates/proedit-app",
    "crates/proedit-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ProEdit Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JorgGoram/proedit-studio"

[workspace.dependencies]
# Internal crates
proedit-core = { path = "crates/proedit-core" }
proedit-media = { path = "crates/proedit-media" }
proedit-gpu = { path = "crates/proedit-gpu" }
proedit-timeline = { path = "crates/proedit-timeline" }
proedit-effects = { path = "crates/proedit-effects" }
proedit-ui = { path = "crates/proedit-ui" }
proedit-audio = { path = "crates/proedit-audio" }
proedit-ai = { path = "crates/proedit-ai" }
proedit-tracking = { path = "crates/proedit-tracking" }
proedit-plugin = { path = "crates/proedit-plugin" }
proedit-scripting = { path = "crates/proedit-scripting" }
proedit-color = { path = "crates/proedit-color" }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time", "macros"] }

# GPU rendering (Metal backend for macOS)
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"

# UI framework
egui = "0.30"
egui-wgpu = "0.30"
egui_dock = "0.15"
eframe = { version = "0.30", default-features = false, features = ["wgpu", "persistence"] }

# Media processing - using ffmpeg-sidecar for easier FFmpeg integration
# ffmpeg-next = "7.0"  # Requires pkg-config and FFmpeg dev headers
ffmpeg-sidecar = "2.0"

# Audio
cpal = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Math
glam = { version = "0.29", features = ["bytemuck"] }

# Utilities
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.8"
num-rational = { version = "0.4", features = ["serde"] }
smallvec = "1.13"
uuid = { version = "1.0", features = ["v4", "serde"] }

# AI/ML
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"] }
ndarray = "0.16"
dirs = "5.0"
which = "7.0"
num_cpus = "1.16"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
