[package]
name = "proedit-audio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Audio engine for ProEdit Studio"

[dependencies]
proedit-core.workspace = true
cpal.workspace = true
thiserror.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
serde.workspace = true
