[package]
name = "proedit-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "GPU rendering pipeline for ProEdit Studio"

[dependencies]
proedit-core.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
pollster.workspace = true
serde.workspace = true

[dev-dependencies]
image = "0.25"
