[package]
name = "proedit-scripting"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Expression engine and scripting for ProEdit Studio"

[dependencies]
proedit-core.workspace = true
thiserror.workspace = true
serde.workspace = true
boa_engine = { version = "0.20", optional = true }

[features]
default = ["scripting"]
scripting = ["boa_engine"]
