[package]
name = "proedit-tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Motion tracking and stabilization for ProEdit Studio"

[dependencies]
proedit-core.workspace = true
glam.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
